--- a/sample/index.html
+++ b/sample/index.html
@@ -19,11 +19,11 @@
     <h2>Development environment</h2>
     <p>
         This is a demo of the <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/overview.html#classic-editor">classic editor
-        build</a> that loads <code>MyPlugin</code>, which is an example plugin produced by the package generator. You can modify this
+        build</a> that loads <code>SourceEditingCodeMirror</code>, which is an example plugin produced by the package generator. You can modify this
         sample and use it to validate whether a plugin or a set of plugins work fine.
     </p>
     <p>
-        <code>MyPlugin</code> inserts a text into the editor. You can click the CKEditor 5 icon in the toolbar and see the results.
+        <code>SourceEditingCodeMirror</code> inserts a text into the editor. You can click the CKEditor 5 icon in the toolbar and see the results.
     </p>
 
     <h3>Helpful resources</h3>
@@ -72,11 +72,11 @@
 │  └─ ckeditor.js      # The editor initialization script.
 ├─ src
 │  ├─ index.js         # The modules exported by the package when using the DLL builds.
-│  ├─ myplugin.js      # The plugin that shows the very basic usage of the CKEditor 5 framework.
+│  ├─ sourceeditingcodemirror.js      # The plugin that shows the very basic usage of the CKEditor 5 framework.
 │  └─ **/*.js          # All JavaScript source files should be saved here.
 ├─ tests
 │  ├─ index.js         # Tests for the plugin.
-│  ├─ myplugin.js
+│  ├─ sourceeditingcodemirror.js
 │  └─ **/*.js          # All tests should be saved here.
 ├─ theme
 │  ├─ icons
