Establish CKE5 editor in htmlmixed mode

--- a/sample/index.html
+++ b/sample/index.html
@@ -10,6 +10,7 @@
             margin: 20px auto;
         }
     </style>
+	<link rel="stylesheet" href="https://unpkg.com/codemirror@5.65.1/lib/codemirror.css">
 </head>
 <body>
 
@@ -95,6 +96,11 @@
     </ul>
 </div>
 
+<script type="text/javascript" src="https://unpkg.com/codemirror@5.65.1/lib/codemirror.js"></script>
+<script type="text/javascript" src="https://unpkg.com/codemirror@5.65.1/mode/xml/xml.js"></script>
+<script type="text/javascript" src="https://unpkg.com/codemirror@5.65.1/mode/javascript/javascript.js"></script>
+<script type="text/javascript" src="https://unpkg.com/codemirror@5.65.1/mode/css/css.js"></script>
+<script type="text/javascript" src="https://unpkg.com/codemirror@5.65.1/mode/htmlmixed/htmlmixed.js"></script>
 <script src="./ckeditor.dist.js"></script>
 </body>
 </html>
