--- a/sample/dll.html
+++ b/sample/dll.html
@@ -10,6 +10,7 @@
             margin: 20px auto;
         }
     </style>
+	<link rel="stylesheet" href="../node_modules/codemirror/lib/codemirror.css">
 </head>
 <body>
 
@@ -61,6 +62,18 @@
     </ul>
 </div>
 
+<script type="text/javascript" src="https://unpkg.com/codemirror@5.65.1/lib/codemirror.js"></script>
+<script type="text/javascript" src="https://unpkg.com/codemirror@5.65.1/mode/xml/xml.js"></script>
+<script type="text/javascript" src="https://unpkg.com/codemirror@5.65.1/mode/javascript/javascript.js"></script>
+<script type="text/javascript" src="https://unpkg.com/codemirror@5.65.1/mode/css/css.js"></script>
+<script type="text/javascript" src="https://unpkg.com/codemirror@5.65.1/mode/htmlmixed/htmlmixed.js"></script>
+
+<script src="../node_modules/codemirror/lib/codemirror.js"></script>
+<script src="../node_modules/codemirror/mode/xml/xml.js"></script>
+<script src="../node_modules/codemirror/mode/javascript/javascript.js"></script>
+<script src="../node_modules/codemirror/mode/css/css.js"></script>
+<script src="../node_modules/codemirror/mode/htmlmixed/htmlmixed.js"></script>
+
 <!-- DLL builds are served from the `node_modules/` directory -->
 <script src="../node_modules/ckeditor5/build/ckeditor5-dll.js"></script>
 <script src="../node_modules/@ckeditor/ckeditor5-editor-classic/build/editor-classic.js"></script>
@@ -76,6 +89,7 @@
 <script src="../node_modules/@ckeditor/ckeditor5-media-embed/build/media-embed.js"></script>
 <script src="../node_modules/@ckeditor/ckeditor5-list/build/list.js"></script>
 <script src="../node_modules/@ckeditor/ckeditor5-table/build/table.js"></script>
+<script src="../node_modules/@ckeditor/ckeditor5-source-editing/build/source-editing.js"></script>
 
 <!-- The "@cdubz/ckeditor5-source-editing-codemirror" package DLL build is served from the `build/` directory -->
 <script src="../build/source-editing-codemirror.js"></script>
@@ -108,7 +122,8 @@
 				CKEditor5.table.TableToolbar,
 				CKEditor5.codeBlock.CodeBlock,
 				CKEditor5.basicStyles.Code,
-				CKEditor5.upload.Base64UploadAdapter
+				CKEditor5.upload.Base64UploadAdapter,
+				CKEditor5.sourceEditing.SourceEditing
 			],
 			toolbar: [
 				'heading',
@@ -129,8 +144,7 @@
 				'mediaEmbed',
 				'codeBlock',
 				'|',
-				'undo',
-				'redo'
+				'sourceEditing'
 			],
 			image: {
 				toolbar: [ 'imageStyle:inline', 'imageStyle:block', 'imageStyle:side', '|', 'imageTextAlternative' ]
@@ -141,6 +155,11 @@
 					'tableRow',
 					'mergeTableCells'
 				]
+			},
+		  	sourceEditingCodeMirror: {
+			  options: {
+				lineNumbers: true
+			  }
 			}
 		} )
 		.then( editor => {
